# MoreAi

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  models_list.md  opencode.json  pyproject.toml
.github/workflows/: docker.yml
app/: main.py
app/admin/: __init__.py  applier.py  config_manager.py  observer.py  resolver.py  router.py  schemas.py
app/agents/: __init__.py  base.py  completion_service.py  registry.py  runtime.py  server_client.py  utils.py
app/api/: __init__.py  rate_limit.py  routes_home.py  routes_openai.py  routes_studio.py  routes_ui.py  studio_modes.py
app/browser/: __init__.py  auth.py  base.py  capabilities.py  debug_artifacts.py  internal_chat_client.py  page_helpers.py  recon.py  registry.py  response_waiter.py  selectors.py  session_manager.py  session_pool.py  telemetry.py
app/core/: __init__.py  config.py  diagnostics.py  errors.py  health.py  logging.py  metrics.py  tracing.py  (+2 more)
config/: admin.json  integrations.example.toml
data/: moreai.db
e2e/: config.py  conftest.py  helpers.py  test_admin.py  test_api.py  test_live_optional.py  test_smoke.py  test_studio.py  test_ui.py
scripts/: bootstrap_google_auth.py  recon_chat_ui.py  sync_g4f_ready_to_use.py
secrets/: browser_auth.example.json
tests/: test_adaptive_scoring.py  test_admin.py  test_agent_discovery.py  test_api_completion_service.py  test_api_routes.py  test_auth_bootstrap.py  test_batched_activity_lookup.py  test_browser_completion_service.py  test_browser_dispatcher.py  test_chat_proxy_service.py  test_config.py  test_deepseek_provider.py  test_execution_store_bootstrap.py  test_execution_trace.py  test_exploration_system.py  test_integration_registry.py  test_integrations_config.py  test_intelligence.py  test_intelligence_discovery.py  test_kilocode_provider.py  test_kimi_provider.py  test_message_parser.py  test_model_discovery.py  test_model_registry_service.py  test_model_type_detection.py  test_observability.py  test_ollamafreeapi_adapter.py  test_openai_compatible_adapter.py  test_openai_mapper.py  test_opencode_provider.py  test_openrouter_provider.py  test_pipeline.py  test_pipeline_fallback.py  test_quality_scoring.py  test_ready_to_use_parser.py  test_registry.py  test_role_aware_staleness.py  test_scoring_history.py  test_search_filtering.py  test_search_system.py  (+7 more)
(+137 files in other folders)
