[project]
name = "moreai-proxy"
version = "0.1.0"
description = "OpenAI-compatible API proxy with browser automation for Qwen Chat"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Development Team"}]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.dependencies]
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
playwright = ">=1.41.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
httpx = ">=0.26.0"
python-dotenv = ">=1.0.0"
structlog = ">=24.1.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
